# simple-RAG

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
example/: gemini_with_pinecone.py  gemini_with_supabase.py  vertexAI_RAG_engine.py  vertexAI_vector_search.py
source/: helper_function.py
source/datasources/: pinecone.py  utils.py
source/embeddings/: gemini_embedding.py
source/models/: google_llm.py
